welcome.lessons.welcome.summative.Moria.scala.code
do{
do{recule()
  }while(!(estSurBiscuit || estDosMur))
	if (estSurBiscuit()){
		prendBiscuit();
		do{avance()
 	  	}while(!estSurBiscuit)
    recule();
    poseBisctuit();
  	recule();}
else{gauche();avance();gauche()}
}while (!estDosMur)

  

